--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>welteq</projectName>
+                            <projectName>Hrcms</projectName>
                             <outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>
                             <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
                         </configuration>
